--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@clr/angular": "^0.13.7",
+    "@clr/icons": "^0.13.7",
+    "@clr/ui": "^0.13.7",
+    "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
