fix(ci): Use project version of Angular CLI instead of the global one

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: node_js
 node_js:
-  - "10"
+  - "11"
 
 branches:
   except:
   - master
 
-before_script:
-  - npm install -g @angular/cli
-
 script:
-  - ng build --prod
+  - npm run build
 
 deploy:
   provider: pages
