--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,10 +1,9 @@
-name: Build branch
+name: Build and deploy
 
 on: 
   push:
-    branches-ignore:
-    - master
-    - release
+    branches:
+    - chore/ci
 
 jobs:
   build:
@@ -19,4 +18,12 @@ jobs:
       run: npm install
     - name: Run Angular build
       run: npm run build -- --prod
+    - name: Deploy
+      if: success()
+      uses: crazy-max/ghaction-github-pages@v1
+      with:
+        target_branch: master
+        build_dir: dist/evan-suau/
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
