--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,11 +3,11 @@ name: Build and deploy
 on: 
   push:
     branches:
-    - chore/ci
+    - release
 
 jobs:
   build:
-    name: Build app
+    name: Build and publish
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
