--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build branch
+name: Test and build
 
 on: 
   push:
@@ -7,9 +7,22 @@ on:
     - release
 
 jobs:
+  test:
+    name: Test app
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: Install dependencies
+      run: npm install
+    - name: Run unit tests
+      run: npm run test 
   build:
     name: Build app
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
