--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,9 +15,9 @@ jobs:
       with:
         node-version: '12.x'
     - name: Install dependencies
-      run: npm install
+      run: yarn install
     - name: Run unit tests
-      run: npm run test 
+      run: yarn test
   build:
     name: Publish app
     runs-on: ubuntu-latest
@@ -27,9 +27,9 @@ jobs:
       with:
         node-version: '12.x'
     - name: Install dependencies
-      run: npm install
+      run: yarn install
     - name: Run Angular build
-      run: npm run build -- --prod
+      run: yarn build --prod
     - name: Deploy
       if: success()
       uses: crazy-max/ghaction-github-pages@v1
