--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
       with:
         node-version: '12.x'
     - name: Install dependencies
-      run: npm install
+      run: yarn install
     - name: Run unit tests
-      run: npm run test 
+      run: yarn test
   build:
     name: Build app
     runs-on: ubuntu-latest
@@ -32,7 +32,7 @@ jobs:
       with:
         node-version: '12.x'
     - name: Install dependencies
-      run: npm install
+      run: yarn install
     - name: Run Angular build
-      run: npm run build -- --prod
+      run: yarn build
       
