chore(ci): Fix chromedriver version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,7 @@ jobs:
           ${{ runner.os }}-yarn-
     - name: Install dependencies
       run: |
-        yarn install && yarn update-webdriver
-    - name: Run Angular build
-      run: |
-        yarn e2e
+        yarn install && yarn update-webdriver --versions.chrome=80.0.3987.106
+    - name: Run end-to-end tests
+      run: yarn e2e
       
